Added login view

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,7 +11,7 @@
     </style>
 
     <div class="card">
-      <h1>[[ _("View One") ]]</h1>
+      <h1>{{ _("View One") }}</h1>
       <p>Ut labores minimum atomorum pro. Laudem tibique ut has.</p>
       <p>Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Cu mei vide viris gloriatur, at populo eripuit sit.</p>
     </div>
