--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -12,10 +12,10 @@
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="i18n.html">
+<link rel="import" href="login.html">
 
-<script>
-i18n.loadlang(navigator.language || 'en');
-</script>
+<script src="../bower_components/jquery/dist/jquery.min.js"></script>
+<script src="../bower_components/jquery.cookie/jquery.cookie.js"></script>
 
 <dom-module id="socializa-app">
   <template>
@@ -65,12 +65,13 @@ i18n.loadlang(navigator.language || 'en');
         data="{{routeData}}"
         tail="{{subroute}}"></app-route>
 
-    <app-drawer-layout fullbleed>
+    <app-drawer-layout fullbleed hidden$="{{ !user.isAuthenticated }}">
       <!-- Drawer content -->
-      <app-drawer>
+      <app-drawer id="menu">
         <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="index" href="/index">[[ _("View One") ]]</a>
+          <a name="index" href="/index">{{ _("View One") }}</a>
+          <a id="logout" href="#">{{ _("Logout") }}</a>
         </iron-selector>
       </app-drawer>
 
@@ -80,7 +81,7 @@ i18n.loadlang(navigator.language || 'en');
         <app-header condenses reveals effects="waterfall">
           <app-toolbar>
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-            <div main-title>[[ _("Hello World!") ]]</div>
+            <div main-title>{{ _("Hello World!") }}</div>
           </app-toolbar>
         </app-header>
 
@@ -94,6 +95,11 @@ i18n.loadlang(navigator.language || 'en');
         </iron-pages>
       </app-header-layout>
     </app-drawer-layout>
+
+    <!-- login page -->
+    <template is="dom-if" if="{{!user.isAuthenticated}}">
+      <socializa-login user={{user}}></socializa-login>
+    </template>
   </template>
 
   <script>
@@ -102,14 +108,35 @@ i18n.loadlang(navigator.language || 'en');
       _: i18n._,
 
       ready: function() {
+        var u = $.cookie('socializa-user');
+        if (u) {
+            this.set('user', JSON.parse(u));
+        }
       },
 
       properties: {
+        user: {
+          type: Object,
+          notify: true,
+          value: {username: 'Anonymous', isAuthenticated: false}
+        },
+
         page: {
           type: String,
           reflectToAttribute: true,
           observer: '_pageChanged'
         }
+      },
+
+      listeners: {
+        'logout.tap': 'logoutTap',
+      },
+
+      logoutTap: function(e) {
+        $.cookie('socializa-user', '');
+        this.set('user', {username: 'Anonymous', isAuthenticated: false});
+        document.querySelector('#menu').close();
+        document.querySelector('app-route').set('route.path', '/index');
       },
 
       observers: [
