--- a/frontend/src/i18n.html
+++ b/frontend/src/i18n.html
@@ -1,13 +1,15 @@
 <script src="../bower_components/ijs/i.min.js"></script>
 
 <script>
-    var i18n = new iJS.Gettext();
+    window.i18n = new iJS.Gettext();
     i18n.bindtextdomain("socializa", "./locales", "po");
 
     i18n.loadlang = function(lang) {
         i18n.setlocale(lang);
         i18n.try_load_lang();
     };
+
+    i18n.loadlang(navigator.language || 'en');
 
     i18n._ = function(msg) {
         return i18n.gettext(msg);
