--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -56,6 +56,19 @@
 
         font-weight: bold;
       }
+
+      .menu-logo {
+        height: 40px;
+        display: inline-block;
+        float: left;
+        margin-right: 10px;
+      }
+
+      .menu-text {
+        display: inline-block;
+        line-height: 40px;
+        height: 40px;
+      }
     </style>
 
     <app-location route="{{route}}"></app-location>
@@ -71,6 +84,7 @@
         <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="index" href="/index">{{ _("View One") }}</a>
+          <a name="profile" href="/profile">{{ _("Profile") }}</a>
           <a id="logout" href="#">{{ _("Logout") }}</a>
         </iron-selector>
       </app-drawer>
@@ -81,7 +95,10 @@
         <app-header condenses reveals effects="waterfall">
           <app-toolbar>
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-            <div main-title>{{ _("Hello World!") }}</div>
+            <div main-title>
+                <img src="../images/icon.png" class="menu-logo" alt="logo"/>
+                <span class="menu-text"> Socializa </span>
+            </div>
           </app-toolbar>
         </app-header>
 
@@ -91,6 +108,7 @@
             fallback-selection="404"
             role="main">
           <socializa-index name="index"></socializa-index>
+          <socializa-profile name="profile" user={{user}}></socializa-profile>
           <socializa-404 name="404"></socializa-404>
         </iron-pages>
       </app-header-layout>
@@ -118,7 +136,11 @@
         user: {
           type: Object,
           notify: true,
-          value: {username: 'Anonymous', isAuthenticated: false}
+          value: {
+            username: 'Anonymous',
+            isAuthenticated: false,
+            interests: []
+          }
         },
 
         page: {
@@ -134,7 +156,11 @@
 
       logoutTap: function(e) {
         $.cookie('socializa-user', '');
-        this.set('user', {username: 'Anonymous', isAuthenticated: false});
+        this.set('user', {
+            username: 'Anonymous',
+            isAuthenticated: false,
+            interests: []
+        });
         document.querySelector('#menu').close();
         document.querySelector('app-route').set('route.path', '/index');
       },
@@ -150,7 +176,9 @@
       _pageChanged: function(page) {
         // Load page import on demand. Show 404 page if fails
         var resolvedPageUrl = this.resolveUrl(page + '.html');
+        $(".menu-text").html($("a[name="+page+"]").html());
         this.importHref(resolvedPageUrl, null, this._showPage404, true);
+        document.querySelector('#menu').close();
       },
 
       _showPage404: function() {
