Checked if GPS enabled, else activate with confirm window

--- a/socializa-app/www/index.html
+++ b/socializa-app/www/index.html
@@ -56,9 +56,13 @@
 </head>
 
 <body unresolved>
+    <span id="status">ST</span><br>
+    <span id="location">TEST</span><br>
+    <button id="send-pos" type="button" onclick="sendPos()">GET POS</button>
     <socializa-app></socializa-app>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/test.js"></script>
     <script type="text/javascript">
         app.initialize();
     </script>
