Base example app with bootstrap styles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,12 +39,14 @@
     <meta name="msapplication-TileImage" content="app/images/manifest/icon-144x144.png">
     <meta name="msapplication-TileColor" content="#67ddff">
     <meta name="msapplication-tap-highlight" content="no">
+
+    <link rel="stylesheet" href="app/main.css" type="text/css">
 </head>
 
 <body>
     <div id="content"></div>
 
-    <!-- TEST -->
+    <!-- TEST
     <span id="status">ST</span><br>
     <span id="location">TEST</span><br>
     <button id="send-pos" type="button" onclick="sendPos()">GET POS</button><br>
@@ -52,7 +54,7 @@
     <button id="qrcode-scan" type="button" onclick="scanQR()">SCAN QR</button><br>
     <span id="qrcreating">empty</span><br>
     <button id="qrcode-create" type="button" onclick="createQR()">CREATE QR</button><br>
-    <!-- END TEST -->
+    END TEST -->
 
     <!-- scripts -->
     <script src="app/vendors.js"></script>
