Added cordova js to the index

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,14 +57,18 @@
     END TEST -->
 
     <!-- scripts -->
-    <script src="app/vendors.js"></script>
-    <script src="app/main.js"></script>
+    <script src="cordova.js"></script>
+    <script src="js/index.js"></script>
 
     <script type="text/javascript">
         if (app) {
             app.initialize();
         }
     </script>
+
+    <script src="app/vendors.js"></script>
+    <script src="app/main.js"></script>
+
 </body>
 
 </html>
