--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
-    <!-- build:app -->
+
+    <!--<app>-->
 
     <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
@@ -17,7 +18,7 @@
     -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
 
-    <!-- endbuild -->
+    <!--</app>-->
 
     <title>Socializa</title>
     <meta name="description" content="Find people in real life">
@@ -66,8 +67,11 @@
         var HOST = "";
     </script>
 
-    <!-- build:app -->
+    <!--<web>-->
+        <script src="app/js/qrcode.js"></script>
+    <!--</web>-->
 
+    <!--<app>-->
     <script src="cordova.js"></script>
     <script src="js/index.js"></script>
 
@@ -77,8 +81,7 @@
             app.initialize();
         }
     </script>
-
-    <!-- endbuild -->
+    <!--</app>-->
 
     <script src="app/vendors.js"></script>
     <script src="app/main.js"></script>
