Qrcode capture with html5

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,10 +67,6 @@
         var HOST = "";
     </script>
 
-    <!--<web>-->
-        <script src="app/js/qrcode.js"></script>
-    <!--</web>-->
-
     <!--<app>-->
     <script src="cordova.js"></script>
     <script src="js/index.js"></script>
@@ -86,6 +82,11 @@
     <script src="app/vendors.js"></script>
     <script src="app/main.js"></script>
 
+    <!--<web>-->
+        <script src="app/js/jsqrcode-combined.min.js"></script>
+        <script src="app/js/html5-qrcode.js"></script>
+        <script src="app/js/qrcode.js"></script>
+    <!--</web>-->
 </body>
 
 </html>
