--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,6 +70,7 @@
     <!--<app>-->
     <script src="cordova.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/qrcode.js"></script>
 
     <script type="text/javascript">
         HOST = "http://socializa.wadobo.com";
