frontend: fixed qrcode polling

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,13 +52,7 @@
     <div id="content"></div>
 
     <!-- TEST
-    <span id="status">ST</span><br>
-    <span id="location">TEST</span><br>
-    <button id="send-pos" type="button" onclick="sendPos()">GET POS</button><br>
-    <span id="qrtext">empty</span><br>
-    <button id="qrcode-scan" type="button" onclick="scanQR()">SCAN QR</button><br>
-    <span id="qrcreating">empty</span><br>
-    <button id="qrcode-create" type="button" onclick="createQR()">CREATE QR</button><br>
+    <button id="qrcode-scan" type="button" onclick="scanQR(function(r) { alert(r.text) })">SCAN QR</button><br>
     END TEST -->
 
     <!-- scripts -->
