--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,6 +68,7 @@
 
     <script type="text/javascript">
         HOST = "https://socializa.wadobo.com";
+        HOST = "http://192.168.1.104:8000";
         if (app) {
             app.initialize();
         }
