Social authentication with JS instead of redirections

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,6 +81,9 @@
         <script src="app/js/jsqrcode-combined.min.js"></script>
         <script src="app/js/html5-qrcode.js"></script>
         <script src="app/js/qrcode.js"></script>
+
+        <script src="https://connect.facebook.net/en_US/sdk.js" async defer></script>
+        <script src="https://apis.google.com/js/api.js" async defer></script>
     <!--</web>-->
 </body>
 
