Changed address to dev

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,7 +67,7 @@
     <script src="js/qrcode.js"></script>
 
     <script type="text/javascript">
-        HOST = "https://socializa.wadobo.com";
+        HOST = "https://devsocializa.wadobo.com";
         if (app) {
             app.initialize();
         }
