--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,6 +66,9 @@
     <script src="js/index.js"></script>
     <script src="js/qrcode.js"></script>
 
+    <script src="js/facebook.js"></script>
+    <script src="js/gplus.js"></script>
+
     <script type="text/javascript">
         HOST = "https://devsocializa.wadobo.com";
         if (app) {
@@ -84,6 +87,9 @@
 
         <script src="https://connect.facebook.net/en_US/sdk.js" async defer></script>
         <script src="https://apis.google.com/js/api.js" async defer></script>
+
+        <script src="app/js/facebook.js"></script>
+        <script src="app/js/gplus.js"></script>
     <!--</web>-->
 </body>
 
