--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,6 +66,7 @@
     <script src="js/index.js"></script>
     <script src="js/qrcode.js"></script>
 
+    <script src="js/store.js"></script>
     <script src="js/facebook.js"></script>
     <script src="js/gplus.js"></script>
 
@@ -84,6 +85,8 @@
         <script src="app/js/jsqrcode-combined.min.js"></script>
         <script src="app/js/html5-qrcode.js"></script>
         <script src="app/js/qrcode.js"></script>
+
+        <script src="app/js/store.js"></script>
 
         <script src="https://connect.facebook.net/en_US/sdk.js" async defer></script>
         <script src="https://apis.google.com/js/api.js" async defer></script>
