using socializa.wadobo instead of devsocializa.wadobo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -71,7 +71,7 @@
     <script src="js/gplus.js"></script>
 
     <script type="text/javascript">
-        HOST = "https://devsocializa.wadobo.com";
+        HOST = "https://socializa.wadobo.com";
         if (app) {
             app.initialize();
         }
