--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <!--<app>-->
 
     <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
-    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; img-src * 'self' data: https:; style-src 'self' 'unsafe-inline'; media-src * 'unsafe-inline'" />
     <!-- Good default declaration:
     * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
     * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
