--- a/socializa-app/www/index.html
+++ b/socializa-app/www/index.html
@@ -1,1 +1,87 @@
-../../frontend/dist/index.html
+<!DOCTYPE html>
+<html lang="en"><head>
+    <meta charset="utf-8">
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
+
+    <!--<app>-->
+
+    <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; img-src * 'self' data: https:; style-src 'self' 'unsafe-inline'; media-src * 'unsafe-inline'" />
+    <!-- Good default declaration:
+    * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
+    * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
+    * Disables use of eval() and inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
+        * Enable inline JS: add 'unsafe-inline' to default-src
+        * Enable eval(): add 'unsafe-eval' to default-src
+    * Create your own at http://cspisawesome.com
+    -->
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
+
+    <!--</app>-->
+
+    <title>Socializa</title>
+    <meta name="description" content="Find people in real life">
+
+    <link rel="icon" href="app/images/favicon.ico">
+    <link rel="manifest" href="app/manifest.json">
+
+    <meta name="theme-color" content="#67ddff">
+
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Socializa">
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Socializa">
+
+    <link rel="apple-touch-icon" href="app/images/manifest/icon-48x48.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="app/images/manifest/icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="96x96" href="app/images/manifest/icon-96x96.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="app/images/manifest/icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="app/images/manifest/icon-192x192.png">
+
+    <meta name="msapplication-TileImage" content="app/images/manifest/icon-144x144.png">
+    <meta name="msapplication-TileColor" content="#67ddff">
+    <meta name="msapplication-tap-highlight" content="no">
+
+    <link rel="stylesheet" href="app/main.css" type="text/css">
+</head>
+
+<body>
+    <div id="content"></div>
+
+    <!-- TEST
+    <button id="qrcode-scan" type="button" onclick="scanQR(function(r) { alert(r.text) })">SCAN QR</button><br>
+    END TEST -->
+
+    <!-- scripts -->
+
+    <script type="text/javascript">
+        var HOST = "";
+    </script>
+
+    <!--<app>-->
+    <script src="cordova.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/qrcode.js"></script>
+
+    <script src="js/store.js"></script>
+    <script src="js/facebook.js"></script>
+    <script src="js/gplus.js"></script>
+
+    <script type="text/javascript">
+        HOST = "https://devsocializa.wadobo.com";
+        if (app) {
+            app.initialize();
+        }
+    </script>
+    <!--</app>-->
+
+    <script src="app/vendors.js"></script>
+    <script src="app/main.js"></script>
+
+    
+</body>
+
+</html>
