New app release: 1.0.15

--- a/socializa-app/www/index.html
+++ b/socializa-app/www/index.html
@@ -7,7 +7,7 @@
     <!--<app>-->
 
     <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
-    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; img-src * 'self' data: https:; style-src 'self' 'unsafe-inline'; media-src * 'unsafe-inline'; frame-src gap://ready" />
     <!-- Good default declaration:
     * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
     * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
@@ -71,7 +71,7 @@
     <script src="js/gplus.js"></script>
 
     <script type="text/javascript">
-        HOST = "https://socializa.wadobo.com";
+        HOST = "https://devsocializa.wadobo.com";
         if (app) {
             app.initialize();
         }
